src/objects/Task__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billable_by_default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable by default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_hourly_rate__c</fullName>
        <label>Default hourly rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatically add to new projects</label>
        <type>Checkbox</type>
    </fields>
    <label>Task</label>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>